--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel-frontend-presets/argon": "^2.0",
-        "laravel/framework": "^11.0",
+        "laravel-frontend-presets/argon": "2.0.2",
+        "laravel/framework": "^11.44.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "spatie/laravel-medialibrary": "^10.11"
+        "spatie/laravel-medialibrary": "^11.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
@@ -67,6 +67,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
